Fix Gmail custom scrollbar handle style

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -710,6 +710,7 @@ aside { display: none; }
 	box-shadow: inset 1px 1px 1px rgba(0, 0, 0, 0.25);
 }
 
+.dragging .handle4,
 .handle4:active {
 	background: darken(white, 50%);
 	background: rgba(0, 0, 0, 0.5);
